2010-03-25       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  added new rule to test specific
	  dejagnu tests.
	* gm2/gccgm2.c:  gm2_tree_inlining_walk_subtrees
	  (New function).  gm2_gimplify_function_parameters
	  (New function).  gm2_gimplify_function_node
	  (New function) which correctly gimplifies
	  nested functions.
	* gm2/gm2-common.h:  gm2_tree_inlining_walk_subtrees
	  new prototype.
	* gm2/gm2-lang.c:  comment out gm2_tree_inlining_walk_subtrees.
	* gm2/m2pp.c:  corrected GetVoidType.
	* gm2/gm2-compiler/M2GenGCC.mod:  corrected
	  CheckConvertCoerceParameter so that set parameters are not
	  cast to constants.  Fixes a bug reported by
	  Scott Iverson.
	* gm2/gm2-libs-iso/COROUTINES.mod:  removed unused code.
	  (Temporary checkin).
	* gm2/gm2/config-lang.in:  added examples/map/Makefile
	  examples/gravity/Makefile examples/hello/Makefile
	  to the list of files to be built by configure.
	* gm2/examples/hello/Makefile.in:  (New file).
	* gm2/examples/gravity/Makefile.in:  (New file).
	* gm2/examples/map/Makefile.in:  (New file).

2010-03-17       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2ALU.def:  CheckOrResetOverflow
          (New procedure) replaces CheckOverflow.
	* gm2/gm2-compiler/M2ALU.mod:  implement
	  CheckOrResetOverflow.
	* gm2/gm2-compiler/M2GenGCC.mod:  replace CheckOverflow
	  with CheckOrResetOverflow.
	* gm2/gm2-compiler/M2Quads.def:  export and declare
	  MustCheckOverflow (New procedure).
	* gm2/gm2-compiler/M2Quads.mod:  implement
	  MustCheckOverflow.  Modify doBuildAssignment,
	  doBuildBinaryOp to take an extra parameter, overflow.
	  PutQuadO, GenQuadO (New procedures).
	* gm2/gm2/gm2-libs/RTint.mod:  turn off debugging.
	* gm2/gm2-libs-ch/sckt.c:  turn off debugging.
	* above changes fix bug reported by Scott Iverson
	  <http://lists.gnu.org/archive/html/gm2/2010-03/msg00016.html>
	* gm2/gm2-compiler/M2ALU.mod:  corrected import (RemoveOverflow).

2010-03-11       Gaius Mulley <gaius@gnu.org>
